Fix mat ripple on mobiles

--- a/Sortify/ClientApp/src/styles/custom-material.sass
+++ b/Sortify/ClientApp/src/styles/custom-material.sass
@@ -51,7 +51,6 @@
 // mat-stepper
 
 .app-container .mat-stepper-horizontal
-  z-index: 10
   color: $white
   background-color: $gray-dark-background
   border-radius: 10px
@@ -66,6 +65,7 @@
 .app-container .mat-horizontal-stepper-header
   font-family: "CircularSpotifyTxT-Black"
   padding: 0 12px
+  z-index: 10
 
 .app-container .mat-horizontal-stepper-header-container
   background-color: $gray-dark-background
@@ -247,6 +247,9 @@
 
 
 // mat-chip
+
+.app-container .mat-chip-ripple
+  z-index: 10
 
 .app-container .mat-chip-list
   outline: 0
